<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Telemetrie Data System</string>
    <string name="app_name_short">Telemetrie Data System</string>
    <string name="action_settings">Settings</string>
    <string name="lorumipsum">Hello world!Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</string>
    <string name="btn_empf_meld">Receive Messages</string>
        <string name="btn_service">Server Connection: OFF</string>
    <string name="btn_setting">Settings</string>
    <string name="title_activity_load">Loading</string>
    <string name="hello_world">Hello world!</string>
    <string name="tdslogo">TDS Logo</string>
    <string name="load">Loading</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_ip">Server/IP:</string>
    <string name="settings_ip_hint">www.tds.de</string>
    <string name="settings_port">Port:</string>
    <string name="settings_port_hint">7777</string>
    <string name="settings_fahrzeug_id">Fahrzeug-ID:</string>
    <string name="settings_fahrzeug_id_hint">B-MW123</string>
    <string name="settings_password">Password:</string>
    <string name="settings_password_hint">*****</string>
    <string name="settings_btn_save">Save Settings</string>
    <string name="title_activity_receive_messages">Received Messages</string>
    <string name="title_activity_message_detail">Message Details</string>
    <string name="position">Position:</string>
    <string name="title_activity_position_view">Position View</string>
    <string name="right">></string>

</resources>
